--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <!-- Include the place holder text "Enter Message" -->
 
       <label for="message">
-        <textarea id="message" name="message" placeholder="Enter Message"></label>
+        <textarea id="message" name="message" placeholder="Enter Message"></textarea></label>
   
       
 
